--- a/plugins/qPCL/qPCL.qrc
+++ b/plugins/qPCL/qPCL.qrc
@@ -1,12 +1,12 @@
 <RCC>
     <qresource prefix="/toolbar">
         <file>pcl.png</file>
-        <file>PclUtils/icons/load.png</file>
-        <file>PclUtils/icons/mls_smoothing.png</file>
-        <file>PclUtils/icons/normal_curvature.png</file>
-        <file>PclUtils/icons/pcl.png</file>
-        <file>PclUtils/icons/save.png</file>
-        <file>PclUtils/icons/sift.png</file>
-        <file>PclUtils/icons/sor_outlier_remover.png</file>
+        <file>Filters/icons/load.png</file>
+        <file>Filters/icons/mls_smoothing.png</file>
+        <file>Filters/icons/normal_curvature.png</file>
+        <file>Filters/icons/pcl.png</file>
+        <file>Filters/icons/save.png</file>
+        <file>Filters/icons/sift.png</file>
+        <file>Filters/icons/sor_outlier_remover.png</file>
     </qresource>
 </RCC>
